--- a/w02/backend/package.json
+++ b/w02/backend/package.json
@@ -11,6 +11,7 @@
   "author": "Nathan \\ <joj20160@byui.edu\\>",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongodb": "^6.1.0"
   },
