--- a/contacts/package.json
+++ b/contacts/package.json
@@ -11,6 +11,7 @@
   "author": "Nathan J. \\ <joh20160@byui.edu>",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.3.2",
     "express": "^4.18.2",
     "mongodb": "^6.3.0"
   }
