--- a/contacts/package.json
+++ b/contacts/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "swagger": "node ./swagger.js",
     "start": "node server.js"
   },
   "author": "Nathan J. \\ <joh20160@byui.edu>",
@@ -14,6 +15,10 @@
     "body-parser": "^1.20.2",
     "dotenv": "^16.3.2",
     "express": "^4.18.2",
-    "mongodb": "^6.3.0"
+    "mongodb": "^6.3.0",
+    "swagger-ui-express": "^5.0.0"
+  },
+  "devDependencies": {
+    "swagger-autogen": "^2.23.7"
   }
 }
