--- a/recipes/package.json
+++ b/recipes/package.json
@@ -12,12 +12,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.7",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "mongodb": "^6.3.0",
     "nodemon": "^3.1.0",
+    "path": "^0.12.7",
     "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
