--- a/wanderer/package.json
+++ b/wanderer/package.json
@@ -18,5 +18,8 @@
     "mongodb": "^6.5.0",
     "nodemon": "^3.1.0",
     "swagger-ui-express": "^5.0.0"
+  },
+  "devDependencies": {
+    "swagger-autogen": "^2.23.7"
   }
 }
