--- a/wanderer/package.json
+++ b/wanderer/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "swagger": "node ./swagger.js",
     "dev": "nodemon server.js",
+    "test": "jest",
     "start": "node server.js"
   },
   "author": "",
@@ -17,10 +17,12 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "mongodb": "^6.5.0",
+    "mongoose": "^8.2.3",
     "nodemon": "^3.1.0",
     "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
+    "jest": "^29.7.0",
     "swagger-autogen": "^2.23.7"
   },
   "type": "module"
