--- a/wanderer/package.json
+++ b/wanderer/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "scripts": {
     "swagger": "node ./swagger.js",
+    "swagger-dev": "node ./swagger-dev.js",
     "dev": "nodemon server.js",
     "test": "jest",
     "start": "node server.js"
