--- a/wanderer/package.json
+++ b/wanderer/package.json
@@ -25,6 +25,7 @@
     "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "jest": "^29.7.0",
     "swagger-autogen": "^2.23.7"
   },
